--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -177,7 +177,7 @@
         </div>
     </nav>
 
-    <form action="">
+    <form action="processamento_cadastro.php" method="post">
         <div class="container d-flex justify-content-center align-items-center geral" style="height: 100vh;">
             <div class="container-fluid" id="box" style="padding-top: 16px; padding-bottom: 16px;">
                 <label class="card-text mb-2">Nome Completo</label>
