--- a/pages/sinais.html
+++ b/pages/sinais.html
@@ -171,6 +171,28 @@
             justify-content: space-around;
             width: 100%;
         }
+
+        @media screen and (min-width: 768px) and (max-width: 1024px){
+            #temperatura{
+                width: 8%;
+            }
+        }
+
+        @media screen and (min-width: 1024px){
+            .linha1, .linha2, .linha3, .linha4{
+                display: flex;
+                justify-content: center;
+            }
+
+            .grupo4{
+                display: flex;
+                justify-content: center;
+            }
+
+            #temperatura{
+                width: 15%;
+            }
+        }
         
         @media screen and (max-width: 767px){
             #temperatura{
@@ -187,6 +209,10 @@
 
             .normal_anormal{
                 width: 100% !important;
+            }
+
+            #pulso{
+                margin-bottom: 15px;
             }
         }
     </style>
@@ -331,14 +357,14 @@
                             <span class="d-flex align-items-center">PERFUSÃO:</span>
                             <div class="checks">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                    <input class="form-check-input" type="radio" name="perfusao" id="flexCheckDefault">
                                 </div>
                                 
                                 <span><2SEG</span>
                             </div>
                             <div class="checks">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                    <input class="form-check-input" type="radio" name="perfusao" id="flexCheckDefault">
                                 </div>
                                 <span>>2SEG</span>
                             </div>
@@ -347,13 +373,13 @@
                             <div class="d-flex" style="gap: 10px;">
                                 <span>NORMAL</span>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                    <input class="form-check-input" type="radio" name="normalidade" id="flexCheckDefault">
                                 </div>
                             </div>
                             <div class="d-flex" style="gap: 10px;">
                                 <span>ANORMAL</span>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                    <input class="form-check-input" type="radio" name="normalidade" id="flexCheckDefault">
                                 </div>
                             </div>
                         </div>
