--- a/pages/sinaisesintomas.html
+++ b/pages/sinaisesintomas.html
@@ -728,7 +728,7 @@
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             const edemaCheckbox = document.querySelector('input[id="edemaCheckbox"]');
-            const containeredema = document.querySelector('.container-fluid-teste-2');
+            const containeredema = document.querySelector('.container-fluid-teste');
 
             edemaCheckbox.addEventListener('change', function () {
                 if (edemaCheckbox.checked) {
