--- a/pages/cinematica.html
+++ b/pages/cinematica.html
@@ -93,7 +93,7 @@
               ><img src="../images/avatar_bombeiro.png" width="60px"
             /></a>
             <p class="navbar-title mt-3 fw-bold text">
-              ANAMNESE DA EMERGÊNCIA MÉDICA
+              AVALIAÇÃO DA CINEMÁTICA
             </p>
             <button
               class="navbar-toggler"
