--- a/pages/glasglow.html
+++ b/pages/glasglow.html
@@ -61,6 +61,21 @@
     #row3{
         gap: 8%;
     }
+    #col1{
+      background-color: #333333;
+    }
+    .espaço_botao {
+      display: flex;
+      width: 100%;
+      height: 10vh;
+     justify-content: center;
+    }
+    .botao {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 90%;
+    }
 
 </style>
 </head>
@@ -224,23 +239,141 @@
         <div class="row text-center d-flex align-items-center" id="row">
             <b>NÍVEL DE CONCIÊNCIA</b>
         </div>
+        
         <BR>
         <BR>
+
         <div class="row d-flex text-center justify-content-center" id="row2">
             <div class="col-10 h-75 d-flex justify-content-center align-items-center " id="col">
                 <b>MENORES DE 5 ANOS</b>
             </div>
         </div>
+
         <br>
         <br>
+
         <div class="row h-25 justify-content-center" id="row3">
-            <div class="col-3 " id="col"></div>
-            <div class="col-6" id="col"></div>
+            <div class="col-3 d-flex align-items-center justify-content-center text-center" id="col">
+              ABERTURA  DE <br> OCULAR
+            </div>
+
+            <div class="col-6 pt-2 " id="col">
+                <div class="row d-flex pl-4">
+                    <div class="col-1">4</div>
+                    <div class="col-1">
+                        <div class="form-check d-flex">
+                          <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                    <div class="col-3">ESPONTANEA</div>
+                </div>
+               <br>
+                <div class="row d-flex pl-4">
+                  <div class="col-1">4</div>
+                  <div class="col-1">
+                    <div class="form-check d-flex">
+                      <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    </div>
+                  </div>
+                  <div class="col-3">ESPONTANEA</div>
+                </div>
+                <br>
+                <div class="row d-flex pl-4">
+                  <div class="col-1">4</div>
+                  <div class="col-1">
+                    <div class="form-check d-flex">
+                      <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    </div>
+                  </div>
+                  <div class="col-3">ESPONTANEA</div>
+                </div>
+                <br>
+                <div class="row d-flex pl-4">
+                  <div class="col-1">4</div>
+                  <div class="col-1">
+                    <div class="form-check d-flex">
+                      <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    </div>
+                  </div>
+                  <div class="col-3">ESPONTANEA</div>
+                </div>
+            </div>
+          </div>
+        <br>
+
+        <div class="row h-25 justify-content-center" id="row3">
+          <div class="col-3 d-flex align-items-center justify-content-center text-center" id="col">
+            RESPOSTA <br> VERBAL
+          </div>
+          <div class="col-6" id="col">
+            
+          </div>
         </div>
+
         <br>
-        <div class="row"></div>
+
+        <div class="row h-25 justify-content-center" id="row3">
+          <div class="col-3 d-flex align-items-center justify-content-center text-center" id="col">
+            RESPOSTAS <br> MOTORA
+          </div>
+          <div class="col-6" id="col"></div>
+        </div>
+
         <br>
-        <div class="row"></div>
+        <br>
+
+        <div class="row d-flex justify-content-center" id="row2">
+            <div class="col-5 h-75" id="col1">
+
+            </div>
+        </div>
+
+        <br>
+        <br>
+
+        <div class="row d-flex text-center justify-content-center" id="row2">
+          <div class="col-10 h-75 d-flex justify-content-center align-items-center " id="col">
+              <b>MAIORES DE 5 ANOS</b>
+          </div>
+      </div>
+
+      <br>
+      <br>
+
+      <div class="row h-25 justify-content-center" id="row3">
+          <div class="col-3 d-flex align-items-center justify-content-center text-center" id="col">ABERTURA DE <br> OCULAR</div>
+          <div class="col-6" id="col"></div>
+      </div>
+
+      <br>
+
+      <div class="row h-25 justify-content-center" id="row3">
+        <div class="col-3 d-flex align-items-center justify-content-center text-center" id="col">RESPOSTA <br> VERBAL</div>
+        <div class="col-6" id="col"></div>
+      </div>
+
+      <br>
+
+      <div class="row h-25 justify-content-center" id="row3">
+        <div class="col-3 d-flex align-items-center justify-content-center text-center" id="col">RESPOSTAS <br> MOTORA</div>
+        <div class="col-6" id="col"></div>
+      </div>
+
+      <br>
+      <br>
+
+      <div class="row d-flex justify-content-center" id="row2">
+          <div class="col-5 h-75" id="col1">
+
+          </div>
+      </div>
+
+      <div class="espaço_botao">
+          <div class="botao">
+              <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
+              <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
+          </div>
+      </div>
     </div>
 </body>
 </html>
