--- a/pages/anamnese médica.html
+++ b/pages/anamnese médica.html
@@ -90,6 +90,26 @@
       align-items: center;
       width: 90%;
     }
+
+    @media screen and (max-width: 750px){
+      #timeInput1{
+        width: 15%;
+      }
+    }
+
+    
+    @media screen and (max-width: 505px){
+      #timeInput1{
+        width: 18%;
+      }
+    }
+
+    @media screen and (max-width: 505px){
+      #timeInput1{
+        width: 20%;
+      }
+    }
+
   </style>
 </head>
 
@@ -303,9 +323,9 @@
                 <textarea class="form-control pt-2" id="medicacao"></textarea>
               </div>
 
-              <div class="container d-flex p-0">
+              <div class="container d-block d-sm-flex p-0">
                 <label class="text mb-0 p-0" style="margin-top: 16px">HORÁRIO DA ÚLTIMA MEDICAÇÃO</label>
-                <input type="text" class="text-line-personality ms-3" id="timeInput1" />
+                <input type="text" class="text-line-personality ms-0 ms-sm-3" id="timeInput1" />
               </div>
             </div>
 
