--- a/pages/anamnese médica.html
+++ b/pages/anamnese médica.html
@@ -110,6 +110,12 @@
       }
     }
 
+    @media  screen and (max-width: 390px) {
+      #label-medicacao-mobile{
+        text-align: center;
+      }
+    }
+
   </style>
 </head>
 
@@ -324,7 +330,7 @@
               </div>
 
               <div class="container d-block d-sm-flex p-0">
-                <label class="text mb-0 p-0" style="margin-top: 16px">HORÁRIO DA ÚLTIMA MEDICAÇÃO</label>
+                <label class="text mb-0 p-0" id="label-medicacao-mobile" style="margin-top: 16px">HORÁRIO DA ÚLTIMA MEDICAÇÃO</label>
                 <input type="text" class="text-line-personality ms-0 ms-sm-3" id="timeInput1" />
               </div>
             </div>
