--- a/pages/anamnese médica.html
+++ b/pages/anamnese médica.html
@@ -92,27 +92,21 @@
     }
 
     @media screen and (max-width: 750px){
-      #timeInput1{
+      .text-line-personality{
         width: 15%;
       }
     }
 
     
     @media screen and (max-width: 505px){
-      #timeInput1{
+      .text-line-personality{
         width: 18%;
       }
     }
 
     @media screen and (max-width: 505px){
-      #timeInput1{
+      .text-line-personality{
         width: 20%;
-      }
-    }
-
-    @media  screen and (max-width: 390px) {
-      #label-medicacao-mobile{
-        text-align: center;
       }
     }
 
@@ -158,8 +152,7 @@
                     <hr class="dropdown-divider" />
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" style="white-space: break-spaces">PROBLEMAS ENCONTRADOS
-                      SUSPEITOS</a>
+                    <a class="dropdown-item" href="#" style="white-space: break-spaces">PROBLEMAS ENCONTRADOS SUSPEITOS</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
@@ -193,8 +186,7 @@
                     <hr class="dropdown-divider" />
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" style="white-space: break-spaces">FORMA DE CONDUÇÃO E DECISÃO DE
-                      TRANSPORTE</a>
+                    <a class="dropdown-item" href="#" style="white-space: break-spaces">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
@@ -331,7 +323,7 @@
 
               <div class="container d-block d-sm-flex p-0">
                 <label class="text mb-0 p-0" id="label-medicacao-mobile" style="margin-top: 16px">HORÁRIO DA ÚLTIMA MEDICAÇÃO</label>
-                <input type="text" class="text-line-personality ms-0 ms-sm-3" id="timeInput1" />
+                <input type="text" class="text-line-personality ms-0 ms-sm-3" id="timeInput1"/>
               </div>
             </div>
 
