--- a/pages/cadastropaciente.html
+++ b/pages/cadastropaciente.html
@@ -39,8 +39,14 @@
             box-shadow: 0 0 0 0.2rem rgba(241, 13, 13, 0.3);
         }
 
+        /* MENU */
         #nav {
             background-color: #333333;
+        }
+
+        .navbar-brand {
+            display: flex;
+            margin: 0px;
         }
 
         .card-text {
@@ -79,7 +85,7 @@
             border-radius: 5px;
         }
 
-        .accordion-button:focus{
+        .accordion-button:focus {
             border-color: none;
             box-shadow: none;
         }
