--- a/pages/conducao.html
+++ b/pages/conducao.html
@@ -41,8 +41,14 @@
             box-shadow: 0 0 0 0.2rem rgba(241, 13, 13, 0.3);
         }
 
+        /* MENU */
         #nav {
             background-color: #333333;
+        }
+
+        .navbar-brand {
+            display: flex;
+            margin: 0px;
         }
 
         .card {
@@ -85,7 +91,7 @@
                 height: 150px;
             }
 
-            .icone{
+            .icone {
                 margin-top: 10px;
             }
         }
