--- a/pages/materiaisutilizados.html
+++ b/pages/materiaisutilizados.html
@@ -61,8 +61,14 @@
             flex-direction: column;
         }
 
+        /* MENU */
         #nav {
             background-color: #333333;
+        }
+
+        .navbar-brand {
+            display: flex;
+            margin: 0px;
         }
 
         .casa {
@@ -105,7 +111,6 @@
             border-bottom: 2px solid rgb(6, 108, 243);
             width: 100%;
         }
-
     </style>
 </head>
 
@@ -341,7 +346,7 @@
                             <input type="text" class="text-line1">
                         </div>
 
-                        
+
 
                     </div>
                 </div>
