--- a/pages/ocorrencia.html
+++ b/pages/ocorrencia.html
@@ -61,8 +61,14 @@
             flex-direction: column;
         }
 
+        /* MENU */
         #nav {
             background-color: #333333;
+        }
+
+        .navbar-brand {
+            display: flex;
+            margin: 0px;
         }
 
         .casa {
@@ -155,7 +161,7 @@
 
             .column {
                 display: flex;
-                flex-direction:column;
+                flex-direction: column;
                 width: 93%;
                 height: 100vh;
                 box-sizing: border-box;
