--- a/pages/sinaisesintomas.html
+++ b/pages/sinaisesintomas.html
@@ -47,8 +47,14 @@
             flex-direction: column;
         }
 
+        /* MENU */
         #nav {
             background-color: #333333;
+        }
+
+        .navbar-brand {
+            display: flex;
+            margin: 0px;
         }
 
         .casa {
