--- a/pages/sinaisteste.html
+++ b/pages/sinaisteste.html
@@ -47,6 +47,11 @@
             background-color: #333333;
         }
 
+        .navbar-brand {
+            display: flex;
+            margin: 0px;
+        }
+
         /* ESPAÇO QUESTIONARIO */
         .fundo {
             width: 100vw;
@@ -151,9 +156,7 @@
 
         @media screen and (min-width: 360px) and (max-width: 613px) {
 
-            .text-align{
-                
-            }
+            .text-align {}
 
         }
     </style>
