--- a/pages/vitimaera.html
+++ b/pages/vitimaera.html
@@ -52,9 +52,14 @@
         color: white;
 
     }
-
+    /* MENU */
     #nav {
         background-color: #333333;
+    }
+
+    .navbar-brand {
+        display: flex;
+        margin: 0px;
     }
 
     .col-6 {
@@ -141,7 +146,8 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
+                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE
+                                        CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
