--- a/pages/equipedeatendimento.html
+++ b/pages/equipedeatendimento.html
@@ -36,8 +36,14 @@
             box-shadow: 0 0 0 0.2rem rgba(241, 13, 13, 0.3);
         }
 
+        /* MENU */
         #nav {
             background-color: #333333;
+        }
+
+        .navbar-brand {
+            display: flex;
+            margin: 0px;
         }
 
         #box {
@@ -117,7 +123,8 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
+                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE
+                                        CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -195,8 +202,7 @@
                 <input type="text" class="form-control" id="matricula" aria-describedby="name" placeholder="S3">
                 <br>
 
-                <input type="text" class="form-control" id="matricula" aria-describedby="name"
-                    placeholder="Demandante">
+                <input type="text" class="form-control" id="matricula" aria-describedby="name" placeholder="Demandante">
             </div>
 
 
