--- a/pages/gestacional.html
+++ b/pages/gestacional.html
@@ -39,8 +39,14 @@
             box-shadow: 0 0 0 0.2rem rgba(241, 13, 13, 0.3);
         }
 
+        /* MENU */
         #nav {
             background-color: #333333;
+        }
+
+        .navbar-brand {
+            display: flex;
+            margin: 0px;
         }
 
         .card {
@@ -421,7 +427,7 @@
             e.target.value = value;
         });
     </script>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
