--- a/pages/home.html
+++ b/pages/home.html
@@ -36,120 +36,154 @@
         }
 
         /* Detalhes nav */
+        /* MENU */
         #nav {
             background-color: #333333;
         }
-        #row{
+
+        .navbar-brand {
+            display: flex;
+            margin: 0px;
+        }
+
+        #row {
             height: 6%;
             margin-top: 13%;
         }
-        #fluid{
+
+        #fluid {
             margin-top: 9%;
         }
-        #col{
+
+        #col {
             font-size: 27px;
             color: #333333;
         }
-        #col1{
+
+        #col1 {
             font-size: 20px;
             color: #333333;
         }
-        #col2{
+
+        #col2 {
             background-color: rgb(255, 84, 84);
             border-radius: 13px;
         }
-        #col3{
+
+        #col3 {
             background-color: rgb(0, 122, 163);
             border-radius: 13px;
-            
+
         }
-        #col4{
+
+        #col4 {
             background-color: rgb(167, 71, 212);
             border-radius: 13px;
         }
-        #row1{
+
+        #row1 {
             height: 30%;
             gap: 49px;
         }
-        .legenda{
+
+        .legenda {
             align-items: center;
             display: flex;
             justify-content: center;
             font-size: 30px;
         }
-        .legenda2{
+
+        .legenda2 {
             align-items: center;
             display: flex;
             justify-content: center;
             font-size: 30px;
         }
+
         .espaço_botao {
             display: flex;
             width: 100%;
             height: 10vh;
             justify-content: center;
         }
-        .legenda3{
+
+        .legenda3 {
             font-size: 44px;
         }
-        .legenda4{
+
+        .legenda4 {
             font-size: 20px;
         }
+
         .botao {
             display: flex;
             justify-content: space-between;
             align-items: center;
             width: 90%;
         }
-        .redcard{
+
+        .redcard {
             padding: 15px;
         }
-            @media screen and (min-width: 375px){
-            .linha2{
+
+        @media screen and (min-width: 375px) {
+            .linha2 {
                 padding-left: 16px;
                 padding-right: 16px;
             }
-            .legenda3{
+
+            .legenda3 {
                 font-size: 26px;
             }
-            .legenda{
+
+            .legenda {
                 font-size: 25px;
             }
-            .legenda2{
+
+            .legenda2 {
                 font-size: 25px;
             }
-           
+
         }
-        @media screen and (min-width: 1024px){
-            .legenda3{
-               font-size: 44px;
+
+        @media screen and (min-width: 1024px) {
+            .legenda3 {
+                font-size: 44px;
             }
-            .legenda4{
-            font-size: 20px;
+
+            .legenda4 {
+                font-size: 20px;
             }
-            .legenda{
+
+            .legenda {
                 font-size: 30px;
             }
-            .legenda2{
+
+            .legenda2 {
                 font-size: 30px;
             }
 
         }
-        @media screen and (min-width: 768px){
-            .legenda3{
-               font-size: 51px;
+
+        @media screen and (min-width: 768px) {
+            .legenda3 {
+                font-size: 51px;
             }
-            .legenda4{
-            font-size: 23px;
+
+            .legenda4 {
+                font-size: 23px;
             }
-            .legenda{
+
+            .legenda {
                 font-size: 30px;
             }
-            .legenda2{
+
+            .legenda2 {
                 font-size: 30px;
                 text-align: center;
             }
-            .redcard{
+
+            .redcard {
                 padding: 35px;
             }
 
@@ -189,7 +223,8 @@
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS ENCONTRADOS SUSPEITOS</a></li>
+                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS
+                                            ENCONTRADOS SUSPEITOS</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
@@ -213,7 +248,8 @@
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
+                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE
+                                            CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
@@ -264,7 +300,7 @@
             <br>
             <div class="row justify-content-center" id="row1">
                 <div class="redcard col-11 h-75" id="col2">
-                    <div class="legenda3 w-75"><b>Nova Ocorrência</b></div> 
+                    <div class="legenda3 w-75"><b>Nova Ocorrência</b></div>
                     <div class="legenda4"><b>Registre os dados do paciente</b></div>
                 </div>
             </div>
