--- a/pages/menu.html
+++ b/pages/menu.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset=UTF-8>
     <!-- Linkagem -->
-    <title>Home-Adm</title>
+    <title>OBJETOS RECOLHIDOS</title>
     <!-- Titulo -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet"
@@ -24,182 +24,75 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-
     <style>
-        body {
+        /*Início do código CSS*/
+
+        /*Resetando estilos da página*/
+        * {
             margin: 0;
             padding: 0;
-            background-color: #C1C1C1;
-            color: white;
-            font-family: 'Inter', sans-serif;
-
+            box-sizing: border-box;
         }
 
-        /* Detalhes nav */
-        /* MENU */
+        /*Definindo fundo e tipo da fonte da página*/
+        body {
+            background-color: #c1c1c1;
+            font-family: 'Inter', sans-serif;
+            height: 100vh;
+            color: white;
+        }
+
+        /*Definindo cor da Navbar*/
         #nav {
             background-color: #333333;
         }
 
-        .navbar-brand {
+        .navbar-brand{
             display: flex;
             margin: 0px;
         }
 
-        .container {
+        /*Definindo cor dos cards*/
+        .card {
+            background-color: #333333;
+        }
+
+        /*Definindo cor da fonte da página*/
+        .text {
+            color: white;
+        }
+
+        /* Definindo estilos dos botões do rodapé */
+        .espaço_botao {
+            display: flex;
+            width: 100%;
+            height: 15vh;
+            justify-content: center;
+        }
+
+        .botao {
             display: flex;
             justify-content: space-between;
-            flex-wrap: wrap;
-            margin-top: 10%;
-        }
-
-        /* Detalhes corpo */
-
-        .base_home {
-            display: flex;
-            flex-direction: column;
-            /* justify-content: center; */
-            height: 100vh;
-            width: 100vw;
-            /* background-color: rgba(127, 255, 212, 0.296); */
-            /* justify-content: space-between; */
-        }
-
-        /* Texto Olá  */
-
-        .texto {
-            display: flex;
-            margin-top: 87px;
-            height: 14%;
-            display: flex;
             align-items: center;
-            justify-content: flex-end;
-            color: #333333;
+            width: 90%;
         }
-
-        .texto-block {
-            display: flex;
-            width: 96%;
-            flex-direction: column;
-        }
-
-        .texto .ola {
-            font-size: 24px;
-            opacity: 0.8;
-        }
-
-        .texto .bombeiro {
-            font-size: 20px;
-            font-weight: 600;
-            margin-left: 25px;
-            margin-top: 10px;
-        }
-
-        /* Dados central */
-        .central {
-            height: 39%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .redcard {
-            height: 82%;
-            width: 84%;
-            background-color: #dc6825;
-            border-radius: 10px;
-            opacity: 1;
-            justify-content: space-between;
-            display: flex;
-            cursor: pointer;
-        }
-
-        .texto-titulo {
-            font-size: 30px;
-            font-weight: 600;
-            margin-top: 30px;
-            margin-left: 30px;
-        }
-
-        .texto-subtitulo {
-            font-size: 24px;
-            font-weight: 600;
-            margin-top: 5px;
-            margin-left: 30px;
-        }
-
-        .card-imagem {
-            display: flex;
-            justify-content: flex-end;
-        }
-
-        .redcard img {
-            height: 26vh;
-        }
-
-        .redcard .card-imagem {
-            margin-top: 0.6%;
-        }
-
-        .align-imagem {
-            display: flex;
-            justify-items: last baseline;
-        }
-
-
-        /* Dados rodapé */
-        .rodape {
-            display: flex;
-            justify-content: center;
-            justify-content: space-evenly;
-            align-items: center;
-            height: 39%;
-        }
-
-        .bluecard {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 67%;
-            width: 36%;
-            border-radius: 10px;
-            display: flex;
-            background-color: #da911d;
-        }
-
-        .purplecard {
-            height: 67%;
-            width: 36%;
-            border-radius: 10px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #3eb140;
-        }
-
-        .card-texto {
-            display: flex;
-            /* align-items: center;
-            justify-content: center; */
-        }
-
-        .texto-titulo-pb {
-            display: flex;
-            font-size: 28px;
-            font-weight: bold;
-            text-align: center;
-            align-items: center;
-            align-items: center;
+        .form-control:focus {
+            border-color: rgb(6, 108, 243);
+            box-shadow: 0 0 0 0.1rem rgb(6, 108, 243);
         }
     </style>
 </head>
 
 <body>
-    <div class="base_home">
-        <nav class="navbar navbar-dark fixed-top" id="nav">
+
+    <!-- container geral -->
+    <div class="container-fluid p-0 h-100">
+
+        <!-- navbar -->
+        <nav class="navbar navbar-dark" id="nav">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"> <img src="../images/avatar_bombeiro.png" width="60px"></a>
-                <p class="navbar-title mt-3 fw-bold">HOME ADM</p>
+                <a class="navbar-brand" href="#"><img src="../images/avatar_bombeiro.png" width="60px"></a>
+                <p class="navbar-title mt-3 fw-bold">OBJETOS RECOLHIDOS</p>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                     aria-label="Toggle navigation">
@@ -226,8 +119,7 @@
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS
-                                            ENCONTRADOS SUSPEITOS</a></li>
+                                    <li><a class="dropdown-item" href="#">PROBLEMAS ENCONTRADOS SUSPEITOS</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
@@ -273,12 +165,13 @@
                                         <hr class="dropdown-divider">
                                     </li>
                                     <li><a class="dropdown-item" href="#">AVALIAÇÃO DA CINEMÁTICA</a></li>
+
                                 </ul>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" style="list-style-type: none">
                                 <a class="nav-link" href="#">PERFIL</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" style="list-style-type: none">
                                 <a class="nav-link" href="#">SAIR</a>
                             </li>
                         </ul>
@@ -286,69 +179,20 @@
                 </div>
             </div>
         </nav>
-        <div class="texto">
-            <div class="texto-block">
-                <div class="ola">Olá,</div>
-                <div class="bombeiro">Adimin Robson</div>
-            </div>
-        </div>
-        <div class="central">
-            <div class="redcard">
-                <div class="card-texto">
-                    <div class="texto-block">
-                        <div class="texto-titulo">Dashboard</div>
-                        <div class="texto-subtitulo">Visualize estatísticas e dados</div>
-                    </div>
-                </div>
-                <!-- <div class="card-imagem">
-                    <div class="align-imagem">
-                        <img src="../images/mais.png">
-                    </div>
-                </div> -->
-            </div>
-        </div>
-        <div class="rodape">
-            <div class="bluecard">
-                <!-- <div class="card-imagem-special">
-                    <div class="align-imagem">
-                        <img src="../images/pastas.png">
-                    </div>
-                </div> -->
-                <div class="card-texto">
-                    <div class="texto-titulo-pb">Histórico de Ocorrências</div>
-                </div>
-            </div>
-            <div class="purplecard">
-                <div class="card-texto">
-                    <div class="texto-titulo-pb">Espaço do Administrador</div>
-                </div>
-                <!-- <div class="card-imagem">
-                    <div class="align-imagem">
-                        <img src="../images/perfil.png">
-                    </div>
-                </div> -->
+
+        <!-- botoes do rodapé -->
+        <div class="espaço_botao">
+            <div class="botao">
+                <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
+                <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
             </div>
         </div>
     </div>
-    <script>
-        var redcard = document.getElementsByClassName('redcard')[0];
 
-        redcard.addEventListener("click", function () {
-            window.location.href = "https://g1.globo.com/";
-        });
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 
-        var bluecard = document.getElementsByClassName('bluecard')[0];
-
-        bluecard.addEventListener("click", function () {
-            window.location.href = "https://g1.globo.com/";
-        });
-
-        var purplecard = document.getElementsByClassName('purplecard')[0];
-
-        purplecard.addEventListener("click", function () {
-            window.location.href = "https://g1.globo.com/";
-        });
-    </script>
 </body>
 
 </html>
