--- a/pages/obsimportante.html
+++ b/pages/obsimportante.html
@@ -43,8 +43,14 @@
         }
 
         /*Definindo cor da Navbar*/
+        /* MENU */
         #nav {
             background-color: #333333;
+        }
+
+        .navbar-brand {
+            display: flex;
+            margin: 0px;
         }
 
         /*Definindo cor dos cards*/
@@ -71,6 +77,7 @@
             align-items: center;
             width: 90%;
         }
+
         .form-control:focus {
             border-color: rgb(6, 108, 243);
             box-shadow: 0 0 0 0.1rem rgb(6, 108, 243);
@@ -178,11 +185,12 @@
         <!-- container dos cards -->
         <div class="container d-flex align-items-center h-100">
 
-            <div class="container card h-75 w-75 p-3" >
+            <div class="container card h-75 w-75 p-3">
                 <div class="form-floating h-100">
-                    <textarea class="form-control h-100" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 80%"></textarea>
+                    <textarea class="form-control h-100" placeholder="Leave a comment here" id="floatingTextarea2"
+                        style="height: 80%"></textarea>
                     <label for="floatingTextarea2">Observações</label>
-                  </div>
+                </div>
             </div>
 
         </div>
