--- a/pages/problemasuspeitos.html
+++ b/pages/problemasuspeitos.html
@@ -39,8 +39,14 @@
             box-shadow: 0 0 0 0.2rem rgba(241, 13, 13, 0.3);
         }
 
+        /* MENU */
         #nav {
             background-color: #333333;
+        }
+
+        .navbar-brand {
+            display: flex;
+            margin: 0px;
         }
 
         .card {
