--- a/pages/sinais.html
+++ b/pages/sinais.html
@@ -46,8 +46,14 @@
 
         }
 
+        /* MENU */
         #nav {
             background-color: #333333;
+        }
+
+        .navbar-brand {
+            display: flex;
+            margin: 0px;
         }
 
         .fundo {
@@ -164,7 +170,8 @@
                 /* margin-top: 40px; */
             }
         }
-        .form{
+
+        .form {
             height: 100%;
             display: flex;
             flex-direction: column;
@@ -172,46 +179,50 @@
             width: 100%;
         }
 
-        @media screen and (min-width: 768px) and (max-width: 1024px){
-            #temperatura{
+        @media screen and (min-width: 768px) and (max-width: 1024px) {
+            #temperatura {
                 width: 8%;
             }
         }
 
-        @media screen and (min-width: 1024px){
-            .linha1, .linha2, .linha3, .linha4{
+        @media screen and (min-width: 1024px) {
+
+            .linha1,
+            .linha2,
+            .linha3,
+            .linha4 {
                 display: flex;
                 justify-content: center;
             }
 
-            .grupo4{
+            .grupo4 {
                 display: flex;
                 justify-content: center;
             }
 
-            #temperatura{
+            #temperatura {
                 width: 15%;
             }
         }
-        
-        @media screen and (max-width: 767px){
-            #temperatura{
+
+        @media screen and (max-width: 767px) {
+            #temperatura {
                 width: 20%;
             }
 
-            .linha5{
+            .linha5 {
                 display: block;
             }
 
-            .perfusao{
+            .perfusao {
                 width: 100%;
             }
 
-            .normal_anormal{
+            .normal_anormal {
                 width: 100% !important;
             }
 
-            #pulso{
+            #pulso {
                 margin-bottom: 15px;
             }
         }
@@ -359,8 +370,9 @@
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="perfusao" id="flexCheckDefault">
                                 </div>
-                                
-                                <span><2SEG</span>
+
+                                <span>
+                                    <2SEG< /span>
                             </div>
                             <div class="checks">
                                 <div class="form-check">
@@ -373,13 +385,15 @@
                             <div class="d-flex" style="gap: 10px;">
                                 <span>NORMAL</span>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="normalidade" id="flexCheckDefault">
+                                    <input class="form-check-input" type="radio" name="normalidade"
+                                        id="flexCheckDefault">
                                 </div>
                             </div>
                             <div class="d-flex" style="gap: 10px;">
                                 <span>ANORMAL</span>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="normalidade" id="flexCheckDefault">
+                                    <input class="form-check-input" type="radio" name="normalidade"
+                                        id="flexCheckDefault">
                                 </div>
                             </div>
                         </div>
