--- a/pages/situation.html
+++ b/pages/situation.html
@@ -66,6 +66,11 @@
         background-color: #333333;
     }
 
+    .navbar-brand {
+        display: flex;
+        margin: 0px;
+    }
+
     /* Detalhes botão voltar */
     .espaço_botao {
         display: flex;
