--- a/pages/home.html
+++ b/pages/home.html
@@ -137,11 +137,17 @@
             }
 
             .legenda {
-                font-size: 25px;
+                font-size: 26px;
             }
 
             .legenda2 {
-                font-size: 25px;
+                font-size: 26px;
+            }
+            #fluid{
+                margin-top: 29%;
+            }
+            .legenda4 {
+                font-size: 19px;
             }
 
         }
@@ -162,10 +168,16 @@
             .legenda2 {
                 font-size: 30px;
             }
+            #fluid{
+                margin-top: 9%;
+            }
+            .redcard {
+                padding: 15px;
+            }
 
         }
 
-        @media screen and (min-width: 768px) {
+        @media screen and (min-width: 1024px) {
             .legenda3 {
                 font-size: 51px;
             }
@@ -184,7 +196,36 @@
             }
 
             .redcard {
+                padding: 15px !important;
+            }
+            #fluid{
+                margin-top: 9%;
+            }
+
+        }
+
+        @media screen and (min-width: 768px) {
+            .redcard {
                 padding: 35px;
+            }
+            #fluid{
+                margin-top: 9%;
+            }
+            .legenda3 {
+                font-size: 51px;
+            }
+
+            .legenda4 {
+                font-size: 23px;
+            }
+
+            .legenda {
+                font-size: 30px;
+            }
+
+            .legenda2 {
+                font-size: 30px;
+                text-align: center;
             }
 
         }
